--- a/src/pages/patterns/disclosures-pattern/index.mdx
+++ b/src/pages/patterns/disclosures-pattern/index.mdx
@@ -133,7 +133,7 @@ click anywhere outside of the open disclosure container or click on the close
 `x` icon if it is present within the disclosure.
 
 <Row>
-<Column colLg={12}>
+<Column colLg={8}>
 
 ![Example of a disclosure opening and closing.](images/disclosure-opening-closing.gif)
 
@@ -274,7 +274,7 @@ the complexity of the menu.
 <Row>
 <Column colLg={8}>
 
-![Example of a disclosure with multiple sections.](images/disclosure-footer-content.png)
+![Example of a disclosure with multiple sections.](images/disclosure-multiple-sections.png)
 
 </Column>
 </Row>
@@ -299,18 +299,18 @@ interactive elements within a popover.
 
 <Caption>Example of a disclosure with interactive content.</Caption>
 
-## Common usecases
+## Common use cases
 
 Disclosures are used for a wide variety of use cases. The following variants are
 a few examples of common disclosures that you may come across frequently in
 product interfaces.
 
-| Example                  | Use cases                                                                                                                                                                                                              |
-| ------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Profile menu             | Profile menus are typically part of a UI shell header and can have navigational options related to a users account or active session.                                                                                  |
-| Context menu             | Context menus are used to provide an additional list of options to take on the element it was triggered from.                                                                                                          |
-| Setting and filter menus | Settings and filter menus are frequently used within data table toolbars to enable users to adjust content. Filter and sort menus can also be used for filtering large amounts of content on a page or an entire page. |
-| Combo button             | Combo buttons are used to contain multiple related actions that come with a default, primary action. Additional actions live in the menu.                                                                              |
+| Example                   | Use cases                                                                                                                                                                                                              |
+| ------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Profile menu              | Profile menus are typically part of a UI shell header and can have navigational options related to a users account or active session.                                                                                  |
+| Context menu              | Context menus are used to provide an additional list of options to take on the element it was triggered from.                                                                                                          |
+| Settings and filter menus | Settings and filter menus are frequently used within data table toolbars to enable users to adjust content. Filter and sort menus can also be used for filtering large amounts of content on a page or an entire page. |
+| Combo button              | Combo buttons are used to contain multiple related actions that come with a default, primary action. Additional actions live in the menu.                                                                              |
 
 ## Profile menu
 
@@ -373,7 +373,7 @@ including interactive elements depending on the use case.
 
 ### Functionality
 
-**Mouse**
+#### Mouse
 
 Clicking the icon button triggers the profile menu to open and reveals
 information related to the users profile and account. The user can then click on
@@ -481,7 +481,7 @@ close the menu by clicking anywhere on the page outside of the menu.
 <Row>
 <Column colLg={12}>
 
-![Example of context menu hover functionality.](images/disclosures-context-menu-functionality-hover.png)
+![Example of context menu focus functionality.](images/disclosures-context-menu-functionality-focus.png)
 
 </Column>
 </Row>
@@ -496,14 +496,6 @@ close the menu by clicking anywhere on the page outside of the menu.
   `Enter`, `Space`, or the `Right` arrow key.
 - To select a menu option press `Enter` or `Space` .
 - To close the profile menu press `Enter`, `Space`, or `Esc` .
-
-<Row>
-<Column colLg={12}>
-
-![Example of context menu focus functionality.](images/disclosures-context-menu-functionality-focus.png)
-
-</Column>
-</Row>
 
 ### Best practices
 
