add(kit): Figma

--- a/src/pages/designing/kits/sketch.mdx
+++ b/src/pages/designing/kits/sketch.mdx
@@ -3,13 +3,13 @@ title: Design kits
 description:
   Rapidly build beautiful and accessible experiences. The Carbon kit contains
   all resources you need to get started.
-tabs: ['Sketch', 'Axure', 'Adobe XD']
+tabs: ['Sketch', 'Figma', Adobe XD', 'Axure']
 ---
 
 <PageDescription>
 
-Rapidly build beautiful and accessible experiences. The Carbon kit contains all
-resources you need to get started.
+Rapidly build beautiful and accessible experiences. The Carbon kit Sketch
+contains all resources you need to get started.
 
 </PageDescription>
 
