Apply suggestions from code review
Co-authored-by: Abbey Hart <abbeyhrt@gmail.com>

--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -3,7 +3,7 @@ title: Design kits
 description:
   Rapidly build beautiful and accessible experiences. The Carbon kit contains
   all resources you need to get started.
-tabs: ['Sketch', 'Figma', Adobe XD', 'Axure']
+tabs: ['Sketch', 'Figma', 'Adobe XD', 'Axure']
 ---
 
 <PageDescription>
@@ -34,7 +34,7 @@ in early 2022 for external use.
 #### 1. Sign into Figma using IBM SSO
 
 You should be added to the IBM Figma organization automatically once you sign
-in. You do not need to join or request to joing any specific team to access the
+in. You do not need to join or request to join any specific team to access the
 libraries.
 
 
