--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -13,15 +13,6 @@ contains all resources you need to get started.
 
 </PageDescription>
 
-<AnchorLinks>
-
-<AnchorLink>Get the library</AnchorLink>
-<AnchorLink>Start designing</AnchorLink>
-
-</AnchorLinks>
-
-## Get the library
-
 <InlineNotification>
 
 **Beta release:** Only the White theme is available in Beta. The other three
@@ -31,13 +22,20 @@ in early 2022 for external use.
 
 </InlineNotification>
 
+<AnchorLinks>
+
+<AnchorLink>Get the library</AnchorLink>
+<AnchorLink>Start designing</AnchorLink>
+
+</AnchorLinks>
+
+## Get the library
+
 #### 1. Sign into Figma using IBM SSO
 
 You should be added to the IBM Figma organization automatically once you sign
 in. You do not need to join or request to join any specific team to access the
 libraries.
-
-
 
 #### 2. Turn on the theme libraries
 
@@ -55,7 +53,7 @@ following libraries:
 - Icons and Pictograms - IBM Design Language
 - Text styles - IBM Design Language
 
-## Using the theme libraries
+## Start designing
 
 ### Components
 
