[kit]Figma: Add in resource links

--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -26,6 +26,7 @@ in early 2022 for external use.
 
 <AnchorLink>Get the library</AnchorLink>
 <AnchorLink>Start designing</AnchorLink>
+<AnchorLink>Feedback</AnchorLink>
 
 </AnchorLinks>
 
@@ -43,6 +44,8 @@ Inside of a design file, navigate to the **Asset** panel on the left and click
 on the **Team library** icon in the upper right of the panel. Find the team
 called `[NEW] IBM Design Systems` and switch the toggle beside
 `White theme - Carbon Design System` to on.
+
+To view the actual library, visit this [view-only link](https://www.figma.com/file/Vzz8k68Pqk5HfaTdQOQrGu/White-Theme---Carbon-Design-System?node-id=456%3A14680).
 
 #### 3. Turn on the other IBM Design Language libraries 
 
@@ -93,3 +96,7 @@ styles to change the color of a text style.
 
 To learn more about applying text styles in Figma, see the
 [Figma docs](https://help.figma.com/hc/en-us/articles/360039957034-Create-and-Apply-Text-Styles#apply).
+
+## Feedback
+
+Help us improve this component by providing feedback, asking questions, and leaving any other comments on [GitHub](https://github.com/carbon-design-system/carbon-design-kit/issues).
