--- a/src/pages/patterns/disclosures-pattern/index.mdx
+++ b/src/pages/patterns/disclosures-pattern/index.mdx
@@ -337,10 +337,7 @@ for more information.
 
 <Caption>Anatomy of a profile menu.</Caption>
 
-1. **Toolbar profile image:** A profile image, initials, or icon of a user. See
-   the user
-   [profile image](https://pages.github.ibm.com/cdai-design/pal/patterns/user-profile-images)
-   guidance for more information.
+1. **Toolbar profile image:** A profile image, initials, or icon of a user.
 2. **Menu profile image:** A profile image that is paired with high level
    information about the user, such as a name or handle.
 3. **Section dividers (optional):** To group related content by creating visual
@@ -669,23 +666,16 @@ page outside of the menu.
 
 #### Keyboard
 
-Primary default button:
+Primary default button: `Tab` to the primary default button to apply focus.
+Trigger the primary default button by pressing `Enter` or `Space`.
 
-- `Tab` to the primary default button to apply focus.
-- Trigger the primary default button by pressing `Enter` or `Space`.
+Icon button: `Tab` to the icon button to apply focus. Open the menu by
+pressing `Enter`, `Space`, or the `Down` arrow key.
 
-Icon button:
-
-- `Tab` to the icon button to apply focus.
-- Open the menu by pressing `Enter`, `Space`, or the `Down` arrow key.
-
-Menu:
-
-- When the menu is opened, focus will go to the first additional action in the
-  menu list.
-- Move between menu actions by pressing the `Up` and `Down` arrow keys.
-- Close the menu by pressing `Enter` or  `Space` to activate the action with
-  focus or `Esc` to cancel.
+Menu: When the menu is opened, focus will go to the first additional action in
+the menu list. Move between menu actions by pressing the `Up` and `Down` arrow
+keys. Close the menu by pressing `Enter` or  `Space` to activate the action with
+focus or `Esc` to cancel.
 
 ### Best practices
 
@@ -767,24 +757,20 @@ coming soon.
 ## References
 
 Context menu,
-[Delivering Relevant Tools for Tasks](https://www.nngroup.com/articles/contextual-menus/),
-(Nielsen Norman Group)
+[Delivering Relevant Tools for Tasks](https://www.nngroup.com/articles/contextual-menus/),(Nielsen
+Norman Group)
 
-Split Buttons,
-[Component definition](https://www.nngroup.com/articles/split-buttons/),
-(Nielsen Norman Group)
+Split
+Buttons,[Component definition](https://www.nngroup.com/articles/split-buttons/),(Nielsen
+Norman Group)
 
-Popup,
-[Component research](https://open-ui.org/components/popup.research#popup),
-(OpenUI)
+Popup,[Component research](https://open-ui.org/components/popup.research#popup),(OpenUI)
 
-Enabling Popups,
-[Initial Explainer](https://open-ui.org/components/popup.research.explainer),
-(OpenUI)
+Enabling
+Popups,[Initial Explainer](https://open-ui.org/components/popup.research.explainer),(OpenUI)
 
-Disclosure,
-[W3C WAI-ARIA practices](https://v11.carbondesignsystem.com/components/popover/usage/%5Bhttps://www.w3.org/TR/wai-aria-practices-1.1/#disclosure),
-(W3C Working Group Note)
+Disclosure,[W3C WAI-ARIA practices](https://v11.carbondesignsystem.com/components/popover/usage/%5Bhttps://www.w3.org/TR/wai-aria-practices-1.1/#disclosure),(W3C
+Working Group Note)
 
 ## Feedback
 
