chore: revert v11updates to type docs and usage docs

--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -358,8 +358,8 @@ import {
 
 ### Sizing
 
-The data table is available in four different
-[row sizes](/data-table/style#row-sizes): tall, normal, short, compact.
+The data table is available in five different row sizes: extra large, large,
+medium, small, extra small.
 
 <Row>
 <Column colLg={8}>
@@ -370,8 +370,8 @@ The data table is available in four different
 </Row>
 
 The column header row `.bx--data-table thead` should always match the row size
-of the table. Tall row heights are only recommended if your data is expected to
-have 2 lines of content in a single row.
+of the table. Extra large row heights are only recommended if your data is
+expected to have 2 lines of content in a single row.
 
 <DoDontRow>
 <DoDont
@@ -392,8 +392,9 @@ caption="Don’t mix row heights for the table and header rows.">
 </DoDontRow>
 
 Two heights are available to be paired with the row heights of the data table.
-The tall toolbar should only be paired with the normal and tall row heights and
-the small toolbar should only be used with the small and compact row heights.
+The tall toolbar should only be paired with the large and extra large row
+heights and the small toolbar should only be used with the small and extra small
+row heights.
 
 <Row>
 <Column colLg={12}>
