--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -106,7 +106,8 @@ destructive or irreversible then use a transactional danger modal.
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
     }}
-  >{`
+  >
+    {`
     <ModalWrapper
       buttonTriggerText="Launch modal"
       modalHeading="Modal heading"
@@ -114,7 +115,8 @@ destructive or irreversible then use a transactional danger modal.
     >
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse cursus fermentum risus, sit amet fringilla nunc pellentesque quis. Duis quis odio ultrices, cursus lacus ac, posuere felis. Donec dignissim libero in augue mattis, a molestie metus vestibulum. Aliquam placerat felis ultrices lorem condimentum, nec ullamcorper felis porttitor. </p>
     </ModalWrapper>
-`}</ComponentVariant>
+`}
+  </ComponentVariant>
   <ComponentVariant
     id="scrolling-content"
     links={{
@@ -250,11 +252,11 @@ of the modal.
 
 ### Sizing
 
-There are four responsive [modal sizes](/components/modal/style#sizes): **xs,
-small, default, large**. Choose a size that works best for the amount of modal
-content you have. Modals with short messages should use a xs or small modal to
-avoid long single lines; for complex components, like data table the default or
-large modal will be more accommodating.
+There are four responsive [modal sizes](/components/modal/style#sizes): extra
+small, small, medium, and large. Choose a size that works best for the amount of
+modal content you have. Modals with short messages should use a extra small or
+small modal to avoid long single lines; for complex components, like data table
+the default or large modal will be more accommodating.
 
 <Row>
 <Column colLg={8}>
