--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -119,7 +119,7 @@ binary decision.
 
 #### Height
 
-There are three height sizes for the content switcher: small (32px), default
+There are three height sizes for the content switcher: small (32px), medium
 (40px), and large (48px). Choose a size that best fits the density of your
 layout or the prominence of the switcher.
 
