chore: revert v11updates to type docs and usage docs

--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -13,25 +13,26 @@ Content switchers have two main states: `selected` and `unselected`. By default,
 content switcher buttons are unselected with the selected state using a high
 contrast color.
 
-| Class                       | Property         | Color token      |
-| --------------------------- | ---------------- | ---------------- |
-| `.bx--content-switcher-btn` | background-color | `$ui-background` |
-| `.bx--content-switcher-btn` | text color       | `$text-02`       |
-| `--selected`                | background-color | `$ui-05`         |
-| `--selected`                | text color       | `$inverse-01`    |
-| `:after`                    | divider          | `$ui-03`         |
+| Class                       | Property         | Color token               |
+| --------------------------- | ---------------- | ------------------------- |
+| `.bx--content-switcher-btn` | background-color | `$background`             |
+| `.bx--content-switcher-btn` | text color       | `$text-secondary`         |
+| `--selected`                | background-color | `$layer-selected-inverse` |
+| `--selected`                | text color       | `$text-inverse`           |
+| `:after`                    | divider          | `$border-subtle`          |
 
 ### Interactive states
 
 Hover states only apply to `unselected` buttons.
 
-| State       | Property         | Color token    |
-| ----------- | ---------------- | -------------- |
-| `:hover`    | background-color | `$hover-ui`    |
-| `:hover`    | text color       | `$text-01`     |
-| `:focus`    | border           | `$focus`       |
-| `:disabled` | background-color | `$disabled-01` |
-| `:disabled` | text color       | `$disabled-02` |
+| State       | Property         | Color token         |
+| ----------- | ---------------- | ------------------- |
+| `:hover`    | background-color | `$background-hover` |
+| `:hover`    | text color       | `$text-primary`     |
+| `:focus`    | border           | `$focus`            |
+| `:disabled` | background-color | `transparent`       |
+| `:disabled` | text color       | `$text-disabled`    |
+| `:disabled` | border           | `$border-disabled`  |
 
 <Row>
 <Column colLg={8}>
@@ -43,13 +44,13 @@ Hover states only apply to `unselected` buttons.
 
 ## Typography
 
-Content switcher text should be set in sentence case, with only the first word
-in a phrase and any proper nouns capitalized. The text should not exceed three
-words.
+Content switcher label text should be set in sentence case, with only the first
+word in a phrase and any proper nouns capitalized. The label text should not
+exceed three words.
 
-| Class                       | Font-size (px/rem) | Font-weight   | Type style       |
-| --------------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--content-switcher-btn` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Element | Font-size (px/rem) | Font-weight   | Type token         |
+| ------- | ------------------ | ------------- | ------------------ |
+| Label   | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
 
 ## Structure
 
@@ -60,9 +61,6 @@ plus the 16 px / 1rem on both sides of the text.
 
 | Class                       | Property                    | px / rem | Spacing token |
 | --------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--content-switcher`     | height: default             | 40 / 2.5 | –             |
-| `.bx--content-switcher`     | height: small               | 32 / 2   | –             |
-| `.bx--content-switcher`     | height: large               | 48 / 3   | –             |
 | `.bx--content-switcher`     | corner radius               | 4px      | –             |
 | `:after`                    | divider                     | 1px      | –             |
 | `.bx--content-switcher-btn` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
@@ -77,3 +75,19 @@ plus the 16 px / 1rem on both sides of the text.
   Structure and spacing measurements for the default size content switcher | px
   / rem
 </Caption>
+
+## Sizes
+
+| Size        | Height px / rem |
+| ----------- | --------------- |
+| Small (sm)  | 32 / 2          |
+| Medium (md) | 40 / 2.5        |
+| Large (lg)  | 48 / 3          |
+
+<div className="image--fixed">
+
+![Sizes for content switcher](images/content-switcher-style-size.png)
+
+</div>
+
+<Caption>Content switcher sizes | px / rem</Caption>
