--- a/src/pages/components/code-snippet/style.mdx
+++ b/src/pages/components/code-snippet/style.mdx
@@ -38,17 +38,16 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Element                          | Property                                                              | Color token     |
 | -------------------------------- | --------------------------------------------------------------------- | --------------- |
-| Container                        | background                                                            | `$layer`\*      |
+| Container                        | background                                                            | `$layer` \*     |
 | Code                             | text color                                                            | `$text-primary` |
 | Icon                             | svg                                                                   | `$icon-primary` |
 | Copy button <br/> Snippet button | See [ghost button - icon only](/components/button/style#ghost-button) |                 |
 | Container:focus                  | border                                                                | `$focus`        |
 
 <Caption>
-  * This is a contextual token and is used by default in Carbon Components to
-  implement the layering model. For its value, a contextual token will use one
-  of three nested layering tokens of the same name and will vary depending on
-  the layer a component is placed on.
+  * Denotes a contextual token, see the [Color
+  guidance](/guidelines/color/implementation#contextual-tokens) for more
+  information.
 </Caption>
 
 <Row>
