--- a/src/pages/components/code-snippet/style.mdx
+++ b/src/pages/components/code-snippet/style.mdx
@@ -18,10 +18,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Container:focus | border                                                                | `$focus`        |
 
 <Caption>
-  * This is a contextual token and is used by default in Carbon Components to
-  implement the layering model. For its value, a contextual token will use one
-  of three nested layering tokens of the same name and will vary depending on
-  the layer a component is placed on.
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
 </Caption>
 
 <Row>
@@ -45,9 +43,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Container:focus                  | border                                                                | `$focus`        |
 
 <Caption>
-  * Denotes a contextual token, see the [Color
-  guidance](/guidelines/color/implementation#contextual-tokens) for more
-  information.
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
 </Caption>
 
 <Row>
@@ -83,10 +80,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Container:active | background-color | `$layer-active`\* |
 
 <Caption>
-  * This is a contextual token and is used by default in Carbon Components to
-  implement the layering model. For its value, a contextual token will use one
-  of three nested layering tokens of the same name and will vary depending on
-  the layer a component is placed on.
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
 </Caption>
 
 <Row>
