v11[style]: add layer annotation (#2662)
* v11[style]: add layer annotation

* Update style.mdx

* Update style.mdx

* remaining components updated

* Update style.mdx

--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -8,16 +8,18 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-Inputs come in two different colors. The default input color is `$field` and is
-used on `$background` and `$overlay` page backgrounds.
+| Class                              | Property         | Color token         |
+| ---------------------------------- | ---------------- | ------------------- |
+| `.bx--label`                       | text color       | `$text-secondary`   |
+| `.bx--number input[type='number']` | text color       | `$text-primary`     |
+| `.bx--number`                      | background-color | `$field` \*         |
+| `.bx--number`                      | border-bottom    | `$border-strong` \* |
+| `.bx--number__controls`            | svg color        | `$icon-primary`     |
 
-| Class                              | Property         | Color token       |
-| ---------------------------------- | ---------------- | ----------------- |
-| `.bx--label`                       | text color       | `$text-secondary` |
-| `.bx--number input[type='number']` | text color       | `$text-primary`   |
-| `.bx--number`                      | background-color | `$field`          |
-| `.bx--number`                      | border-bottom    | `$border-strong`  |
-| `.bx--number__controls`            | svg color        | `$icon-primary`   |
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <div className="image--fixed">
 
@@ -37,21 +39,9 @@ used on `$background` and `$overlay` page backgrounds.
 | `[data-invalid]:focus`                      | color            | `$support-error` |
 | `.bx--form-requirement`                     | text color       | `$support-error` |
 | `.bx--label:disabled`                       | text color       | `$text-disabled` |
-| `.bx--number:disabled`                      | background-color | `$field`         |
+| `.bx--number:disabled`                      | background-color | `$field` \*      |
 | `.bx--number:disabled`                      | border-bottom    | transparent      |
 | `.bx--number input[type='number']:disabled` | text color       | `$text-disabled` |
-
-**Active:** Number input should have a default number to start. The input should
-never be empty.
-
-**Helper text:** Helper text appears below the label when the input is active.
-Helper text remains visible while the input is focused and disappears after
-focus away.
-
-**Error:** Error messages appear below the input field and are always present
-while invalid.
-
-**Disabled:** Disabled state should have a `.not-allowed` cursor on hover.
 
 ## Typography
 
