--- a/src/pages/components/code-snippet/style.mdx
+++ b/src/pages/components/code-snippet/style.mdx
@@ -10,14 +10,17 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Single line
 
-| Class                  | Property         | Color token     |
-| ---------------------- | ---------------- | --------------- |
-| `.bx--snippet`         | background       | `$field`        |
-| `.bx--snippet`         | text color       | `$text-primary` |
-| `.bx--snippet__icon`   | svg              | `$icon-primary` |
-| `.bx--copy-btn:hover`  | background-color | `$layer-hover`  |
-| `.bx--copy-btn:focus`  | border           | `$focus`        |
-| `.bx--copy-btn:active` | background-color | `$layer-active` |
+| Element         | Property                                                              | Color token     |
+| --------------- | --------------------------------------------------------------------- | --------------- |
+| Container       | background                                                            | `$field` \*     |
+| Code            | text color                                                            | `$text-primary` |
+| Copy button     | See [ghost button - icon only](/components/button/style#ghost-button) |                 |
+| Container:focus | border                                                                | `$focus`        |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
@@ -31,14 +34,18 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Multi-line
 
-| Class                                                  | Property         | Color token     |
-| ------------------------------------------------------ | ---------------- | --------------- |
-| `.bx--snippet`                                         | background       | `$layer`        |
-| `.bx--snippet`                                         | text color       | `$text-primary` |
-| `.bx--snippet__icon`                                   | svg              | `$icon-primary` |
-| `.bx--copy-btn:hover` <br/> `.bx--snippet-btn:hover`   | background-color | `$layer-hover`  |
-| `.bx--copy-btn:focus` <br/> `.bx--snippet-btn:focus`   | border           | `$focus`        |
-| `.bx--copy-btn:active` <br/> `.bx--snippet-btn:active` | background-color | `$layer-active` |
+| Element                          | Property                                                              | Color token     |
+| -------------------------------- | --------------------------------------------------------------------- | --------------- |
+| Container                        | background                                                            | `$layer` \*     |
+| Code                             | text color                                                            | `$text-primary` |
+| Icon                             | svg                                                                   | `$icon-primary` |
+| Copy button <br/> Snippet button | See [ghost button - icon only](/components/button/style#ghost-button) |                 |
+| Container:focus                  | border                                                                | `$focus`        |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
@@ -64,13 +71,18 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Inline snippet
 
-| Class                         | Property         | Color token     |
-| ----------------------------- | ---------------- | --------------- |
-| `.bx--snippet--inline`        | background-color | `$layer`        |
-| `.bx--snippet--inline`        | color            | `$text-primary` |
-| `.bx--snippet--inline:hover`  | background-color | `$layer-hover`  |
-| `.bx--snippet--inline:focus`  | focus            | `$focus`        |
-| `.bx--snippet--inline:active` | background-color | `$layer-active` |
+| Element          | Property         | Color token        |
+| ---------------- | ---------------- | ------------------ |
+| Container        | background-color | `$layer` \*        |
+| Code             | text color       | `$text-primary`    |
+| Container:hover  | background-color | `$layer-hover` \*  |
+| Container:focus  | focus            | `$focus`           |
+| Container:active | background-color | `$layer-active` \* |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
@@ -97,12 +109,12 @@ Carbon has defined a set of accessible syntax colors. View an incontext
 
 ### Single line
 
-| Class                  | Property      | px / rem | Spacing token |
-| ---------------------- | ------------- | -------- | ------------- |
-| `.bx--snippet--single` | height        | 40 / 3   | –             |
-| `.bx--snippet--single` | max-width     | 768 / 48 | –             |
-| `.bx--snippet--single` | padding-right | 48 / 3   | `$spacing-09` |
-| `.bx--snippet--single` | padding-left  | 16 / 1   | `$spacing-05` |
+| Element   | Property      | px / rem | Spacing token |
+| --------- | ------------- | -------- | ------------- |
+| Container | height        | 40 / 3   | –             |
+|           | max-width     | 768 / 48 | –             |
+|           | padding-right | 48 / 3   | `$spacing-09` |
+|           | padding-left  | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
@@ -116,16 +128,16 @@ Carbon has defined a set of accessible syntax colors. View an incontext
 
 ### Multi-line code snippet
 
-| Class                    | Property      | px / rem                | Spacing token |
-| ------------------------ | ------------- | ----------------------- | ------------- |
-| `.bx--snippet--multi`    | min-height    | 288 / 18                | –             |
-| `.bx--snippet--multi`    | max-height    | Varies based on content | –             |
-| `.bx--snippet--multi`    | max-width     | 768 / 48                | –             |
-| `.bx--snippet`           | padding       | 16 / 1                  | `$spacing-05` |
-| `.bx--snippet-container` | padding-right | 40 / 2.5                | `$spacing-08` |
-| `.bx--snippet__icon`     | height, width | 16px                    | –             |
-| `.bx--snippet-button`    | height, width | 40 / 2.5                | –             |
-| `.bx--copy-button`       | height, width | 32 / 2                  | –             |
+| Element        | Property      | px / rem                | Spacing token |
+| -------------- | ------------- | ----------------------- | ------------- |
+| Container      | min-height    | 288 / 18                | –             |
+|                | max-height    | Varies based on content | –             |
+|                | max-width     | 768 / 48                | –             |
+|                | padding       | 16 / 1                  | `$spacing-05` |
+|                | padding-right | 40 / 2.5                | `$spacing-08` |
+| Icon           | height, width | 16px                    | –             |
+| Snippet button | height, width | 40 / 2.5                | –             |
+| Copy button    | height, width | 32 / 2                  | –             |
 
 <div className="image--fixed">
 
@@ -139,12 +151,12 @@ Carbon has defined a set of accessible syntax colors. View an incontext
 
 ### Inline code snippet
 
-| Class                       | Property                    | px / rem                | Spacing token |
-| --------------------------- | --------------------------- | ----------------------- | ------------- |
-| `.bx--snippet--inline`      | height                      | 16 / 1                  | –             |
-| `.bx--snippet--inline`      | width                       | Varies based on content | –             |
-| `.bx--snippet--inline`      | border-radius               | 2                       | -             |
-| `.bx--snippet--inline code` | padding-right, padding-left | 8 / 0.5                 | \$spacing-03  |
+| Element   | Property                    | px / rem                | Spacing token |
+| --------- | --------------------------- | ----------------------- | ------------- |
+| Container | height                      | 16 / 1                  | –             |
+|           | width                       | Varies based on content | –             |
+|           | border-radius               | 2                       | -             |
+| Code      | padding-right, padding-left | 8 / 0.5                 | `$spacing-03` |
 
 <div className="image--fixed">
 
